@@ -1,3 +1,13 @@
+Thu Oct 03 17:15:40 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* lib/linear_algebra/linear_algebra.gel: Implement
+	  KroneckerProduct (alias TensorProduct)
+
+	* help/C/genius.xml: Document KroneckerProduct and add a few
+	  wikipedia links and some minor improvements.
+
+	* src/geniustests.txt: add tests
+
 Wed Oct 02 17:36:54 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* configure.in: bump version 
